syntax = "proto3";
package login_proto;
option go_package=".;login_proto";


message LoginRequest {
  string uuid = 1;
  string username = 2;
  string password = 3;
  bool if_encrypted = 4;
  string client_addr = 5;
  uint32 client_port = 6;
  string time = 7;
}

message LoginResponse {
  string uuid = 1;
  string public_key = 2;
  string time = 3;
}

service LoginService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
}